--- a/app/slider.html
+++ b/app/slider.html
@@ -5,23 +5,23 @@
 	<link rel="stylesheet" type="text/css" href="styles/slider.css">
 </head>
 <body>
-<section>
-	
-	<div>
+	<section>
 		
-		<img class="imgslider" src="images/travel/10.jpg">
-	</div>
-	<div class="divsmall">
-		
-	    <img class="imgsmall" src="images/travel/thumb-02.jpg">
-		
-		<img class="imgsmall" src="images/travel/thumb-04.jpg">
-		<img class="imgsmall" src="images/travel/thumb-05.jpg">
-		<img class="imgsmall" src="images/travel/thumb-06.jpg">
-		<img class="imgsmall" src="images/travel/thumb-07.jpg">
-		<img class="imgsmall" src="images/travel/thumb-08.jpg">
-	
-	</div>
-</section>
+		<div>
+			
+			<img class="imgslider" src="images/travel/10.jpg">
+		</div>
+		<div class="divsmall">
+			<img class="imgsmall" src="images/navleft.png">
+			<img class="imgsmall" src="images/travel/thumb-02.jpg">
+			
+			<img class="imgsmall" src="images/travel/thumb-04.jpg">
+			<img class="imgsmall" src="images/travel/thumb-05.jpg">
+			<img class="imgsmall" src="images/travel/thumb-06.jpg">
+			<img class="imgsmall" src="images/travel/thumb-07.jpg">
+			<img class="imgsmall" src="images/travel/thumb-08.jpg">
+			<img class="imgsmall" src="images/navright.png">
+		</div>
+	</section>
 </body>
 </html>
