--- a/app/menu.html
+++ b/app/menu.html
@@ -5,15 +5,15 @@
 	<link rel="stylesheet" href="styles/menu.css">
 </head>
 <body>
-<div>
-	<ul>
-		<li><a href="#">Word News<div>From Around The Globe</div></a></li>
-		<li><a href="#">Celebrity News<div>Juicy Hollywood Gossip</div></a></li>
-      	<li><a href="#">Technologie News<div>Apps, Internet & Gadgets</div></a></li>
-      	<li><a href="#">Lifestyle Typs<div>Your Health & Happiness</div></a></li>
-  		<li><a href="#">Entertainment</a></li>
-       	<li><a href="#">Travel News</a></li>
-	</ul>
-</div>
+	<div>
+		<ul>
+			<li><a href="#">Word News<div>From Around The Globe</div></a></li>
+			<li><a href="#">Celebrity News<div>Juicy Hollywood Gossip</div></a></li>
+			<li><a href="#">Technologie News<div>Apps, Internet & Gadgets</div></a></li>
+			<li><a href="#">Lifestyle Typs<div>Your Health & Happiness</div></a></li>
+			<li><a href="#">Entertainment<div>Movies, Music & Reviews</div></a></li>
+			<li><a href="#">Travel News<div>Travel news guides & Tips</div></a></li>
+		</ul>
+	</div>
 </body>
 </html>
